--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "html-webpack-plugin": "^3.0.4",
     "style-loader": "^0.20.2",
     "url-loader": "0.6.2",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.10",
+    "webpack": "4.44.1",
+    "webpack-cli": "4.1.0",
     "webpack-dev-middleware": "2.0.6",
     "webpack-dev-server": "^3.0.0",
     "webpack-hot-middleware": "2.21.0"
