--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
+    "mini-css-extract-plugin": "^1.3.3",
     "style-loader": "^0.20.2",
     "url-loader": "0.6.2",
     "webpack": "4.44.1",
