--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
     "mini-css-extract-plugin": "^1.3.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "style-loader": "^0.20.2",
     "url-loader": "0.6.2",
     "webpack": "4.44.1",
@@ -30,7 +31,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config=config/webpack.dev.js",
-    "build": "webpack --config=config/webpack.dev.js",
+    "build": "webpack --config=config/webpack.prod.js",
+    "build:dev": "webpack --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js",
     "prod": "node src/server/main.js"
   }
