--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config=config/webpack.dev.js",
-    "build": "webpack --config=config/webpack.prod.js",
+    "build": "NODE_ENV=production webpack --config=config/webpack.prod.js",
     "build:dev": "webpack --config=config/webpack.dev.js",
     "dev": "nodemon --inspect --watch config --watch src/server src/server/main.js",
-    "prod": "node src/server/main.js"
+    "prod": "NODE_ENV=production node src/server/main.js"
   }
 }
