--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "babel-cli": "*",
     "babel-core": "*",
     "babel-loader": "^7.1.3",
+    "babel-minify": "^0.5.1",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-transform-runtime": "*",
     "babel-polyfill": "*",
     "babel-preset-env": "*",
