--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mini-css-extract-plugin": "^1.3.3",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "0.6.2",
     "webpack": "4.44.1",
     "webpack-cli": "4.1.0",
