--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "babel-plugin-transform-runtime": "*",
     "babel-polyfill": "*",
     "babel-preset-env": "*",
+    "compression-webpack-plugin": "6.1.1",
     "css-loader": "^0.28.10",
+    "express-static-gzip": "^2.1.0",
     "extract-loader": "1.0.2",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.11",
