--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-transform-runtime": "*",
     "babel-polyfill": "*",
     "babel-preset-env": "*",
+    "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "6.1.1",
     "css-loader": "^0.28.10",
     "express-static-gzip": "^2.1.0",
