--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "babel-plugin-transform-runtime": "*",
     "babel-polyfill": "*",
     "babel-preset-env": "*",
+    "babel-preset-react": "6.24.1",
     "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "6.1.1",
     "css-loader": "^0.28.10",
+    "ejs-loader": "0.3.1",
     "express-static-gzip": "^2.1.0",
     "extract-loader": "1.0.2",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
@@ -26,6 +28,9 @@
     "html-webpack-plugin": "^3.0.4",
     "mini-css-extract-plugin": "^1.3.3",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-hot-loader": "4.0.0",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "0.6.2",
