--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.4",
     "markdown-loader": "^6.0.0",
+    "markdown-with-front-matter-loader": "^0.1.0",
     "mini-css-extract-plugin": "^1.3.3",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "react": "16.2.0",
