--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "0.6.2",
     "webpack": "4.44.1",
+    "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "4.1.0",
     "webpack-dev-middleware": "2.0.6",
     "webpack-dev-server": "^3.0.0",
